[workspace]
members = ["error-code", "error-code-derive"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
error-code = { path = "./error-code" }
error-code-derive = { path = "./error-code-derive" }
http = "1"
thiserror = "1"

[workspace.lints.clippy]
# Triggers in macro generated code of darling
# https://github.com/rust-lang/rust-clippy/issues/12643
manual-unwrap-or-default = "allow"
